# nexus

./: ..env.swp  .gitignore  Dockerfile  README.md  docker-compose.archestra.yml  main.py  nexus_state.json  pyproject.toml  render.yaml
data/: nexus.db
demo/: full_demo.py  setup_nexus.py  test_discovery.py  test_executor.py  test_graph.py  test_persistence.py  test_registry.py  test_translation.py  video_demo.py
docs/: archestra-integration.md
nexus_core/: api.py  config.py  database.py  discovery.py  embeddings.py  executor.py  graph.py  models.py  profiler.py  registry.py  server.py  translator.py
servers/sentiment-analyzer/: server.py
servers/slack-sender/: server.py
servers/summarizer/: server.py
servers/translator/: server.py
servers/web-fetcher/: server.py
ui/: package-lock.json  package.json  vercel.json
ui/public/: index.html
ui/src/: App.css  App.js  index.css
ui/src/components/: CommandPalette.js  Graph3D.js  PipelinesTab.js
ui/src/lib/: api.js
ui/src/pages/: DashboardPage.js  DocsPage.js  LandingPage.js
